--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,31 +3,21 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --vertical-gradient: linear-gradient(180deg, #07AAEF 0%, #601CE9 100%);
+  --horizontal-gradient: linear-gradient(90deg, #07AAEF 0%, #601CE9 100%);
+  --diagonal-gradient: linear-gradient(135deg, #07AAEF 0%, #601CE9 100%);
+  --primary: #3561EC;
+  --secondary: #D7DCF0;
+  --accent: #601CE9;
+  --background: #F2F3F8;
+  --text: #08090D;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+html,
+body,
+#app,
+#app>div {
+  height: 100%;
+  background: #f3f1fe;
+  color: #1f1a36;
 }
