--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,20 +3,21 @@
 @tailwind utilities;
 
 :root {
-  --vertical-gradient: linear-gradient(180deg, #07AAEF 0%, #601CE9 100%);
-  --horizontal-gradient: linear-gradient(90deg, #07AAEF 0%, #601CE9 100%);
-  --diagonal-gradient: linear-gradient(135deg, #07AAEF 0%, #601CE9 100%);
-  --primary: #3561EC;
-  --secondary: #D7DCF0;
-  --accent: #601CE9;
-  --background: #F2F3F8;
-  --text: #08090D;
+  --vertical-gradient: linear-gradient(180deg, #07aaef 0%, #601ce9 100%);
+  --horizontal-gradient: linear-gradient(90deg, #07aaef 0%, #601ce9 100%);
+  --diagonal-gradient: linear-gradient(135deg, #07aaef 0%, #601ce9 100%);
+  --primary: #3561ec;
+  --secondary: #d7dcf0;
+  --accent: #601ce9;
+  --background: #f2f3f8;
+  --light-primary: #07aaef;
+  --text: #08090d;
 }
 
 html,
 body,
 #app,
-#app>div {
+#app > div {
   height: 100%;
   background: #f3f1fe;
   color: #1f1a36;
